public/stylesheets/mediaqueries.css
/************************************************************/
/*********************** Portrait ***************************/
/************************************************************/
/* iPhone 5/SE */
@media (min-width: 0px) and (orientation: portrait) {
    /********************************/
    /************ Layout ************/
    /********************************/
    .footer-grid {
        grid-template-columns: 1fr;
    }

    /********************************/
    /********* Opening Page *********/
    /********************************/
    #opening-wrapper {
        margin-top: 17%;
        margin-left: 10%;
    }

    #opening-logo {
        height: 150px;
        margin-bottom: 1em;
    }

    #opening-wrapper p {
        font-size: 2em;
    }

    #opening-wrapper .button {
        font-size: 1em;
    }

    /********************************/
    /****** Home Page Dividers ******/
    /********************************/
    /* Dividers */
    .divider {
        display: block;
    }

    .divider--first .pyramid-grid {
        right: 20%;
        bottom: 5%;
    }

    .divider--first__logo {
        width: 100px;
        height: 132px;
    }

    /********************************/
    /****** Home Page Pyramid *******/
    /********************************/
    .pyramid-grid {
        grid-template-columns: repeat(3, 4em);
        grid-template-rows: repeat(3, 4em);
    }

    .pyramid-grid__square {
        font-size: 0.6rem;
    }

    /********************************/
    /****** Home Page Team Grid *****/
    /********************************/
    .team-grid {
        grid-template-columns: repeat(4, 4em);
        grid-template-rows: repeat(3, 4em);
        margin-left: 1em;
    }

    .team-grid__square img {
        width: 84px;
    }

    /********************************/
    /******** Home Page CTA *********/
    /********************************/
    .cta-form__input {
        font-size: 0.7rem;
    }

    .cta-form__select {
        font-size: 0.7rem;
    }

    /********************************/
    /******* Home Page Events *******/
    /********************************/
    .event-table--desktop {
        display: none;
    }

    .event-table--mobile {
        display: table;
    }

    /********************************/
    /*** Home Page Normal Dividers **/
    /********************************/
    .home-text__title {
        text-align: center;
    }

    .home-text__text {
        text-align: center;
    }

    #title-register {
        font-size: 3rem;
    }

    /********************************/
    /*********** Carousel ***********/
    /********************************/
    .carousel__navigation {
        width: 80%;
        margin-top: 10%;
    }

    .carousel__medium {
        max-height: 169px;
        overflow-y: hidden;
    }

    .carousel--event {
        width: 100%;
    }

    .carousel--event .carousel__navigation {
        width: 80%;
    }

    /********************************/
    /********** Sidebar/Nav *********/
    /********************************/
    .side--home {
        display: none !important;
    }

    .side--mobile--home {
        display: flex !important;
    }

    body {
        overflow-x: hidden;
    }

    .menu__item--mobile {
        font-size: 1em;
    }

    /********************************/
    /************ Events ************/
    /********************************/
    .outer-wrapper {
        margin-top: 40%;
    }

    /********************************/
    /************ Login *************/
    /********************************/
    .login-grid {
        grid-template-columns: 100%;
        grid-row-gap: 5em;
    }

    .login {
        width: 100%;
    }

    /********************************/
    /************* Join *************/
    /********************************/
    .register-form {
        width: 95%;
    }

    .register-form__input {
        font-size: 0.7em;
    }

    .register-form__select {
        font-size: 0.7em;
    }

    /********************************/
    /************* Admin ************/
    /********************************/
    .outer-wrapper.outer-wrapper--dashboard {
        margin-top: 40%;
    }

    /******** Dashboard Header User ********/
    .dashboard-user__details {
        text-align: center;
    }

    /******** Dashboard Header Nav ********/
    .dashboard-nav {
        width: auto;
        flex-direction: column;
    }

    /******** Mailing List ********/
    #mailing-list--mobile {
        display: block;
    }

    .mailing-list {
        display: none;
    }

    /******** Events Manage ********/
    .events-header {
        flex-direction: column;
    }

    /********************************/
    /********** Error Page **********/
    /********************************/
    .errorpage-wrapper img {
        height: 150px;
    }

    /********************************/
    /****** Validation Errors *******/
    /********************************/
    .validation-errors {
        width: 100%;
    }

    .validation--register {
        width: 90%;
    }

    /********************************/
    /******** Global Classes ********/
    /********************************/
    .button {
        font-size: 0.4rem;
    }
}
/* ... */

